--- a/smartweb/src/main/resources/com/khoders/smartschool/resources/messages.properties
+++ b/smartweb/src/main/resources/com/khoders/smartschool/resources/messages.properties
@@ -77,6 +77,7 @@ message_template=Message Template
 template=Template
 sms=SMS
 fullname=Fullname
+staff=Staff
 
 save_icon=fa fa-save
 check_icon_circle=fa fa-check-circle
