--- a/smartadmin/src/main/resources/com/khoders/smartschool/smartadmin/resources/messages.properties
+++ b/smartadmin/src/main/resources/com/khoders/smartschool/smartadmin/resources/messages.properties
@@ -69,8 +69,16 @@ received_amount=Received Amount
 amount_unpaid=Amount Unpaid
 sender_id=Sender Id
 received=Received
-cost_price=Cost price
-group=Group
+class=Class
+first_name=First Name
+middle_name=Middle Name
+other_name=Other Name
+gender=Gender
+course=Course
+teacher=Teacher
+level=Level
+fees=Fees
+type=Type
 
 mobile_no=Mobile Number
 message_template=Message Template
