--- a/smartadmin/src/main/resources/com/khoders/smartschool/smartadmin/resources/messages.properties
+++ b/smartadmin/src/main/resources/com/khoders/smartschool/smartadmin/resources/messages.properties
@@ -15,6 +15,10 @@ edit=Edit
 load=Load
 package=Package
 new=New
+name=Name
+school=School
+website=Website
+telephone=Telephone
 purchase_order=Purchse Order
 formatted_date=dd/MM/yyyy
 expiry_date=Expiry Date
