--- a/smartweb/src/main/resources/com/khoders/smartschool/resources/messages.properties
+++ b/smartweb/src/main/resources/com/khoders/smartschool/resources/messages.properties
@@ -16,6 +16,7 @@ edit=Edit
 load=Load
 package=Package
 new=New
+ref_no=Ref. No.
 
 formatted_date=dd/MM/yyyy
 expiry_date=Expiry Date
@@ -81,6 +82,11 @@ sms=SMS
 fullname=Fullname
 staff=Staff
 level=Level
+
+report=Report
+term=Term
+position=Position
+attendance=Attendance
 
 save_icon=fa fa-save
 check_icon_circle=fa fa-check-circle
