--- a/smartadmin/src/main/resources/com/khoders/smartschool/smartadmin/resources/messages.properties
+++ b/smartadmin/src/main/resources/com/khoders/smartschool/smartadmin/resources/messages.properties
@@ -1,9 +1,9 @@
 # To change this license header, choose License Headers in Project Properties.
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
-url=smartschool.com
-title=Smart School Software
-appName=Smart School
+url=diasorc.com
+title=Diaso R/C JHS
+appName=Diaso R/C JHS
 choose=Choose
 save=Save Changes
 clear=Clear
