--- a/smartweb/src/main/resources/com/khoders/smartschool/resources/messages.properties
+++ b/smartweb/src/main/resources/com/khoders/smartschool/resources/messages.properties
@@ -2,9 +2,9 @@
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
 
-url=smartschool.com
-title=Smart School Software
-appName=Smart School
+url=diasorc.com
+title=Diaso R/C JHS
+appName=Diaso R/C JHS
 choose=Choose
 save=Save Changes
 clear=Clear
@@ -22,6 +22,7 @@ formatted_date=dd/MM/yyyy
 expiry_date=Expiry Date
 mnt_yr_format=mmm/yyyy
 formatted_date_time=dd/MM/yyyy - hh:mm:ss
+formatted_date_time_am_pm=dd/MM/yyyy - hh:mm:ss a
 formated_date_time_words=EEE, MMMM d, yyyy hh:mm a
 formated_date_time_words_short=EEE, MMM d, yyyy hh:mm a
 created_date=Created Date
